# Guardian-karna

./: README.md  README.txt  __init__.py  auth.py  browser_window.py  games.py  log_manager.py  main.py  main.spec  mode_manager.py  performance_monitor.py  pyproject.toml  requirements.txt  security_engine.py  setup.cfg  styles.py
guardian-plus/: main_plus.py
shared/: auth.py  log_manager.py  performance_monitor.py  security_engine.py
tests/: test_core.py
