[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian-karna"
version = "0.1.0"
description = "Prototype safe browsing desktop application powered by PyQt6"
authors = [
    { name = "Unknown", email = "nobody@example.com" }
]
dependencies = [
    "PyQt6>=6.8",
    "PyQt6-WebEngine>=6.8",
    "psutil>=5.9",
]

[project.urls]
"Homepage" = "https://example.com/guardian-karna"
